elasticsearch集成以及文档完善